--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </table>
 
   <hr>
-  <li> <a href="My Hobbies.html"> My Hobbies</a> </li>
+  <li> <a href="hobbies.html"> My Hobbies</a> </li>
   <li> <a href="contacts.html">Contact details</a> </li>
 
 </body>
