--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nithin Personal site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <tr>
       <td><img src="image web.jfif" alt="Nithin Profile Picture"></td>
       <td>
-        <h1> Nithin D Souza </h1>
+        <h1><i> Nithin D Souza</i> </h1>
         <p>Founder Of <em><strong><a href="https://nithindsouza.com/"> Nithin Dsouza Site </a></strong> </em></p>
         <p>I am a begineer in Front end developer course</p>
       </td>
